--- a/Xogunners/Views/Home/Index.cshtml
+++ b/Xogunners/Views/Home/Index.cshtml
@@ -2,30 +2,60 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<section class="header-site"></section>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+<section class="content-site">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-sm-4">
+                <figure class="img-fluid">
+                    <img src="~/Content/Imagens/avaliacao.png">
+                    <figcaption class="text-center legendas">
+                        Os melhores motoristas
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-4">
+                <figure class="img-fluid">
+                    <img src="~/Content/Imagens/place.png">
+                    <figcaption class="text-center legendas">
+                        Encontre motoristas próximos de você
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-4">
+                <figure class="img-fluid">
+                    <img src="~/Content/Imagens/clock.png">
+                    <figcaption class="text-center legendas">
+                        Mais agilidade na sua busca
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+        <br/><br/>
+        <hr/>
+        <br /><br/>
+        <p class="texto-descricao">
+            A Xogum Fretes é uma plaforma que torna possível encontrar os melhores motoristas de fretes de forma rápida e fácil.<br />
+            Através da sua localização, encontramos os melhores motoristas disponíveis mais próximos de você!
+            <br /><br/>
+            <figure>
+                <img src="~/Content/Imagens/img-programa.png" />
+                <figcaption>Imagem da Plataforma</figcaption>
+            </figure>
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+</section>
+
+<section class="img-site">
+    <div class="container">
+        <div class="row text-center">
+             <div class="col-xs-12">
+                <p class="lead text-center texto-descricao">Conheça um pouco mais da nossa plataforma e cadastre-se</p>
+            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dCZkGdhd66Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <br/><br/>
+            <button class="btn-lg btn-primary">Cadastre-se</button>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</section>
