--- a/Xogunners/Views/Home/Login.cshtml
+++ b/Xogunners/Views/Home/Login.cshtml
@@ -3,18 +3,33 @@
     ViewBag.Title = "Login";
 }
 
-<section>
-    <form>
-        <h2>Login</h2>
-        <br/>
-        <input type="email" class="form-control" />
-        <br/>
-        <input type="password" class="form-control" />
-        <br/>
-        <button class="btn btn-success">Entrar</button>
-        <br/><br/>
-        <a href="#">Esqueci a senha</a>
-        <br/><br/>
-        <a href="#">Não tem conta? Cadastre-se!</a>
-    </form>
+<section class="img-site">
+    <div class="container">
+
+        <div class="col-md-4 col-md-offset-4">
+            <form class=" formulario-login">
+                <h2 class="text-center">Login</h2>
+                <br />
+                <label class="col-md-offset-1">E-mail</label>
+                <input type="email" placeholder="Digite seu email" class="form-control col-md-offset-1" />
+                <br />
+                <label class="col-md-offset-1">Senha</label>
+                <input type="password" placeholder="Digite sua senha" class="form-control col-md-offset-1" />
+                <br />
+                <div class="text-center">
+                    <button class="btn btn-primary">Entrar</button>
+                </div>
+            </form>
+            <br />
+            <div class="text-center">
+                <a href="@Url.Action("RecuperarSenha","Home")" class="text-center texto-descricao-2">Esqueci a senha</a>
+                <br /><br />
+                <a href="#" class="text-center texto-descricao-2">Cadastre-se agora!</a>
+            </div>
+        </div>
+
+
+
+    </div>
+
 </section>
