Inicio da Criação do Home Administrador

--- a/Xogunners/Content/Site.css
+++ b/Xogunners/Content/Site.css
@@ -88,3 +88,14 @@ footer {
     font-size: 15px;
 }
 
+/*Recuperação de Senha*/
+.img-site-2 {
+    background-image: url(../Content/Imagens/mud.png);
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: #ffffff;
+    padding-top: 7%;
+    padding-bottom: 10%;
+}
+
