--- a/Xogunners/Views/Home/RecuperarSenha.cshtml
+++ b/Xogunners/Views/Home/RecuperarSenha.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<section class="img-site">
+<section class="img-site-2">
     <div class="container">
 
         <div class="col-md-4 col-md-offset-4">
